The second version of task_1_1_2